# hacking-trix-rust

./: README.ja.txt  README.txt  rop-chain.rs  threaded-ncat.rs
elf/ptnote-infector/: Cargo.toml  Makefile  README.ja.md  README.md
elf/ptnote-infector/files/: Makefile  jump_to_start.s  shellcode.s
elf/ptnote-infector/src/: main.rs
elf/standalone-elf-patching/: Makefile  miracle.rs  patcher.rs
injection/ptnote-to-ptload-elf-injection/: Cargo.toml  README.ja.md  README.md  run.sh
injection/ptnote-to-ptload-elf-injection/files/: Makefile  shellcode.s
injection/ptnote-to-ptload-elf-injection/src/: main.rs
injection/standalone-elf-patching/: readme.md
networking/: async-ncat.rs
rop/: rop-example.rs
viruses/linux-ferrisfirst/: README.md
viruses/linux-strongferris/: Cargo.toml
viruses/linux-strongferris/src/: main.rs
viruses/simple-elf-prepender/: README.md  build.sh  ferris-first.rs
