[package]
name = "ptnote-to-ptload-elf-injection"
version = "0.1.0"
authors = ["d3npa <d3npa@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mental_elf = { git = "https://github.com/d3npa/mental-elf-parser" }
